/*
 * $Id: ChangeLog,v 1.2642 2004/03/24 08:08:30 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-24 11:10 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
   * code with cause troubles with GCC optimization (and some other
     C compilers which can change the order of instructions and doesn't
     detect that some of instructions can write to the same place of
     memory using different pointers and casting) replaced
     by byte oriented (a little bit slower but it should not be
     noticeable and I hope it closes this subject.
   ! fixed bug which cause GPF when FOR index condition were used
      reported by Alexander Kresin (thanks)
   
  * xharbour/source/rtl/filesys.c
    ! fixed MING32 compilation I broke in last commit

2004-03-24 15:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/compiler/genc.c
   * source/compiler/hbgenerr.c
     ! minor correction on formatted-printing for some compiler(s) which
       cannot perform: [s][f]printf("<%s>",string) correctly. :-).
     /*
       Test program:
       .---
       | proc main()
       | X()
       |
       | #pragma begindump
       | #include "hbapi.h"
       | HB_FUNC( X ){printf("<%s>\n","Hello");}
       | #pragma enddump
       `---
     */

2004-03-24 00:15 UTC-0800 Brian Hays <bhays@abacuslaw.com>
  * contrib/rdd_ads/ads1.c
    + Added support for ORDKEYADD(), ORDKEYDEL()
      code supplied by Mindaugas Kavaliauskas  (Thanks!))
      This fixes broken calls to adsOrderInfo()

  * contrib/rdd_ads/adsfunc.c
    * upgraded codeblock handling for ShowPercentage(), AdsRegCallback and
          AdsClrCallback()
      code supplied by Ron Pinkas ;-)

2004-03-24 00:30 UTC-0300 Luiz Rafael Culik Guimaraes<culikr@brturbo.com>
  ! utils/hbmake/hbmake.prg
    ! minor fix
